include plinejs library by default into the boilerplate

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html class="no-js">
 <head>
   <meta charset="utf-8">
-  <title>LVMH Prototype</title>
+  <title>PlineJS Boilerplate</title>
   <meta name="description" content="">
   <meta name="author" content="Octave &amp; Octave">
 
@@ -35,18 +35,8 @@
   <div id="viewport"></div>
 
   <script id="tpl-home" type="text/x-handlebars-template">
-    <div id="home-container">
-      <div>
-        <img id="home-left" src="assets/lvmh-life.jpg">
-        <span id="lvmh-life-txt"></span>
-      </div>
-      <div>
-        <img id="home-right" src="assets/map-the-world.jpg">
-        <span id="mapping-txt"></span>
-      </div>
-    </div>
-    <div id="home-bottom-push">
-      
+    <div>
+      Welcome to PlineJS
     </div>
   </script>
 
@@ -60,7 +50,7 @@
 
   <!-- your PlineJS app files-->
   <!-- include plinejs library the way you want (git eternal, minified version, ...-->
-  <!-- <script src="js/libs/flavius/build/plinejs-x.x.js"></script> -->
+  <script src="js/libs/plinejs-0.4-n.js"></script>
 
   <script src="js/app.js"></script>
 
