--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html class="no-js">
 <head>
   <meta charset="utf-8">
-  <title>PlineJS Boilerplate</title>
+  <title>YellowJS Boilerplate</title>
   <meta name="description" content="">
   <meta name="author" content="Octave &amp; Octave">
 
@@ -36,7 +36,7 @@
 
   <script id="tpl-home" type="text/x-handlebars-template">
     <div>
-      Welcome to PlineJS
+      Hello YellowJS
     </div>
   </script>
 
@@ -48,20 +48,21 @@
   <script src="js/libs/handlebars-0.9.0.pre.5.js"></script>
   <!-- end concatenated and minified scripts-->
 
-  <!-- your PlineJS app files-->
-  <!-- include plinejs library the way you want (git eternal, minified version, ...-->
-  <script src="js/libs/plinejs-0.4-n.js"></script>
+  <!-- your YellowJS app files-->
+  <!-- include YellowJS library the way you want (git eternal, minified version, ...-->
+  <script src="js/libs/yellowjs-0.5-n-debug.js"></script>
 
   <script src="js/app.js"></script>
 
   <!-- models -->
+  <script src="js/models/my-model.js"></script>
 
   <!-- views -->
   <script src="js/views/index.js"></script>
 
   <!-- controllers -->
   <script src="js/controllers/index.js"></script>
-  <!-- end your PlineJS app files-->
+  <!-- end your YellowJS app files-->
 
   <script>
     // iPhone Scale Bug Fix, read this when using http://www.blog.highub.com/mobile-2/a-fix-for-iphone-viewport-scale-bug/
