--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <!-- your YellowJS app files-->
   <!-- include YellowJS library the way you want (git eternal, minified version, ...-->
-  <script src="js/libs/yellowjs-0.5-n-debug.js"></script>
+  <script src="js/libs/yellowjs-0.5-n.js"></script>
 
   <script src="js/app.js"></script>
 
