update starterkit to the last nightly

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
   <div id="viewport"></div>
 
   <script id="tpl-home" type="text/x-handlebars-template">
-    <div>
-      Hello YellowJS
-    </div>
+      <img src="assets/images/logo.png" alt="YellowJS">
   </script>
 
   <!-- JavaScript at the bottom for fast page loading -->
